force-app/main/default/objects/Marketing_Cloud_Activity__c/Marketing_Cloud_Activity__c.object-meta.xml
<CustomObject>
    <label>Marketing Cloud Activity</label>
    <nameField>
        <displayFormat>MCA-{0000000}</displayFormat>
        <label>Marketing Cloud Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Cloud Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>