force-app/main/default/objects/Marketing_Cloud_Activity__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <formula>Constituent__r.Id</formula>
    <label>Contact Id</label>
    <type>Text</type>
</CustomField>