force-app/main/default/objects/Marketing_Cloud_Activity__c/fields/Donor_Id__c.field-meta.xml
<CustomField>
    <fullName>Donor_Id__c</fullName>
    <formula>Constituent__r.ucinn_ascendv2__Donor_ID__c</formula>
    <label>Donor Id</label>
    <type>Text</type>
</CustomField>