force-app/main/default/objects/Marketing_Cloud_Activity__c/fields/Marketing_Channel__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Channel__c</fullName>
    <label>Marketing Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>